--- a/Machine Learning/2-3-linear-regression-multiple-variables.ipynb
+++ b/Machine Learning/2-3-linear-regression-multiple-variables.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cdb2e7ac",
+   "id": "16cf7d39",
    "metadata": {
     "papermill": {
-     "duration": 0.011041,
-     "end_time": "2022-02-05T19:14:45.661951",
+     "duration": 0.010854,
+     "end_time": "2022-02-11T14:08:11.734425",
      "exception": false,
-     "start_time": "2022-02-05T19:14:45.650910",
+     "start_time": "2022-02-11T14:08:11.723571",
      "status": "completed"
     },
     "tags": []
@@ -20,20 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2ea87d1",
+   "id": "a6aa4c6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:45.685246Z",
-     "iopub.status.busy": "2022-02-05T19:14:45.683994Z",
-     "iopub.status.idle": "2022-02-05T19:14:46.830648Z",
-     "shell.execute_reply": "2022-02-05T19:14:46.829870Z",
+     "iopub.execute_input": "2022-02-11T14:08:11.761171Z",
+     "iopub.status.busy": "2022-02-11T14:08:11.759823Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.084740Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.083607Z",
      "shell.execute_reply.started": "2022-02-05T19:10:03.203106Z"
     },
     "papermill": {
-     "duration": 1.159075,
-     "end_time": "2022-02-05T19:14:46.830829",
+     "duration": 1.338509,
+     "end_time": "2022-02-11T14:08:13.084940",
      "exception": false,
-     "start_time": "2022-02-05T19:14:45.671754",
+     "start_time": "2022-02-11T14:08:11.746431",
      "status": "completed"
     },
     "tags": []
@@ -49,20 +49,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a2e1029f",
+   "id": "a94a5d14",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:46.864676Z",
-     "iopub.status.busy": "2022-02-05T19:14:46.863620Z",
-     "iopub.status.idle": "2022-02-05T19:14:46.876934Z",
-     "shell.execute_reply": "2022-02-05T19:14:46.876081Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.114370Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.113546Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.132257Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.132782Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.349005Z"
     },
     "papermill": {
-     "duration": 0.035896,
-     "end_time": "2022-02-05T19:14:46.877074",
+     "duration": 0.038125,
+     "end_time": "2022-02-11T14:08:13.132959",
      "exception": false,
-     "start_time": "2022-02-05T19:14:46.841178",
+     "start_time": "2022-02-11T14:08:13.094834",
      "status": "completed"
     },
     "tags": []
@@ -166,20 +166,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22bbfcd1",
+   "id": "7fcee6c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:46.900426Z",
-     "iopub.status.busy": "2022-02-05T19:14:46.899806Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.136503Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.135883Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.158787Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.158123Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.451003Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.451555Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.375963Z"
     },
     "papermill": {
-     "duration": 0.249135,
-     "end_time": "2022-02-05T19:14:47.136669",
+     "duration": 0.307144,
+     "end_time": "2022-02-11T14:08:13.451765",
      "exception": false,
-     "start_time": "2022-02-05T19:14:46.887534",
+     "start_time": "2022-02-11T14:08:13.144621",
      "status": "completed"
     },
     "tags": []
@@ -188,7 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f8baaf29450>"
+       "<matplotlib.collections.PathCollection at 0x7f04c730ed10>"
       ]
      },
      "execution_count": 3,
@@ -221,20 +221,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1f513f9",
+   "id": "5b9370e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:47.187477Z",
-     "iopub.status.busy": "2022-02-05T19:14:47.186665Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.192901Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.193662Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.478988Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.478337Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.511168Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.511738Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.593069Z"
     },
     "papermill": {
-     "duration": 0.046086,
-     "end_time": "2022-02-05T19:14:47.193890",
+     "duration": 0.047911,
+     "end_time": "2022-02-11T14:08:13.511931",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.147804",
+     "start_time": "2022-02-11T14:08:13.464020",
      "status": "completed"
     },
     "tags": []
@@ -259,20 +259,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ad57513",
+   "id": "93e8f482",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:47.222186Z",
-     "iopub.status.busy": "2022-02-05T19:14:47.221537Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.229011Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.228484Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.539942Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.539300Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.544650Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.545227Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.623539Z"
     },
     "papermill": {
-     "duration": 0.022503,
-     "end_time": "2022-02-05T19:14:47.229155",
+     "duration": 0.021072,
+     "end_time": "2022-02-11T14:08:13.545404",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.206652",
+     "start_time": "2022-02-11T14:08:13.524332",
      "status": "completed"
     },
     "tags": []
@@ -296,20 +296,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6818279",
+   "id": "c0155ffd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:47.258482Z",
-     "iopub.status.busy": "2022-02-05T19:14:47.257672Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.260805Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.261272Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.573283Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.572433Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.577367Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.577870Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.635895Z"
     },
     "papermill": {
-     "duration": 0.020389,
-     "end_time": "2022-02-05T19:14:47.261462",
+     "duration": 0.020282,
+     "end_time": "2022-02-11T14:08:13.578040",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.241073",
+     "start_time": "2022-02-11T14:08:13.557758",
      "status": "completed"
     },
     "tags": []
@@ -333,20 +333,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f3b2be2",
+   "id": "a93930b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:47.289399Z",
-     "iopub.status.busy": "2022-02-05T19:14:47.288455Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.294285Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.294835Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.608986Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.608319Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.614032Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.614585Z",
      "shell.execute_reply.started": "2022-02-05T19:10:39.439307Z"
     },
     "papermill": {
-     "duration": 0.021273,
-     "end_time": "2022-02-05T19:14:47.294997",
+     "duration": 0.023305,
+     "end_time": "2022-02-11T14:08:13.614750",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.273724",
+     "start_time": "2022-02-11T14:08:13.591445",
      "status": "completed"
     },
     "tags": []
@@ -369,13 +369,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0ad907",
+   "id": "49f38593",
    "metadata": {
     "papermill": {
-     "duration": 0.012232,
-     "end_time": "2022-02-05T19:14:47.319469",
+     "duration": 0.012722,
+     "end_time": "2022-02-11T14:08:13.640213",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.307237",
+     "start_time": "2022-02-11T14:08:13.627491",
      "status": "completed"
     },
     "tags": []
@@ -387,20 +387,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a80b290",
+   "id": "2a44d085",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-05T19:14:47.347758Z",
-     "iopub.status.busy": "2022-02-05T19:14:47.346797Z",
-     "iopub.status.idle": "2022-02-05T19:14:47.352212Z",
-     "shell.execute_reply": "2022-02-05T19:14:47.352822Z",
+     "iopub.execute_input": "2022-02-11T14:08:13.669890Z",
+     "iopub.status.busy": "2022-02-11T14:08:13.669234Z",
+     "iopub.status.idle": "2022-02-11T14:08:13.674305Z",
+     "shell.execute_reply": "2022-02-11T14:08:13.674843Z",
      "shell.execute_reply.started": "2022-02-05T19:11:46.981666Z"
     },
     "papermill": {
-     "duration": 0.021228,
-     "end_time": "2022-02-05T19:14:47.352984",
+     "duration": 0.021979,
+     "end_time": "2022-02-11T14:08:13.675012",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.331756",
+     "start_time": "2022-02-11T14:08:13.653033",
      "status": "completed"
     },
     "tags": []
@@ -423,13 +423,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8f1a06",
+   "id": "d21b76ae",
    "metadata": {
     "papermill": {
-     "duration": 0.012481,
-     "end_time": "2022-02-05T19:14:47.378259",
+     "duration": 0.01358,
+     "end_time": "2022-02-11T14:08:13.702517",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.365778",
+     "start_time": "2022-02-11T14:08:13.688937",
      "status": "completed"
     },
     "tags": []
@@ -443,13 +443,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0809ed",
+   "id": "e9628a07",
    "metadata": {
     "papermill": {
-     "duration": 0.013062,
-     "end_time": "2022-02-05T19:14:47.404065",
+     "duration": 0.01396,
+     "end_time": "2022-02-11T14:08:13.731112",
      "exception": false,
-     "start_time": "2022-02-05T19:14:47.391003",
+     "start_time": "2022-02-11T14:08:13.717152",
      "status": "completed"
     },
     "tags": []
@@ -478,14 +478,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.098955,
-   "end_time": "2022-02-05T19:14:48.126896",
+   "duration": 13.309348,
+   "end_time": "2022-02-11T14:08:14.456115",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-05T19:14:36.027941",
+   "start_time": "2022-02-11T14:08:01.146767",
    "version": "2.3.3"
   }
  },
