--- a/Machine Learning/3-linear-regression-multiple-variables.ipynb
+++ b/Machine Learning/3-linear-regression-multiple-variables.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16cf7d39",
+   "id": "e797538d",
    "metadata": {
     "papermill": {
-     "duration": 0.010854,
-     "end_time": "2022-02-11T14:08:11.734425",
+     "duration": 0.011244,
+     "end_time": "2022-02-12T13:33:47.752446",
      "exception": false,
-     "start_time": "2022-02-11T14:08:11.723571",
+     "start_time": "2022-02-12T13:33:47.741202",
      "status": "completed"
     },
     "tags": []
@@ -20,20 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6aa4c6a",
+   "id": "cb58b22e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:11.761171Z",
-     "iopub.status.busy": "2022-02-11T14:08:11.759823Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.084740Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.083607Z",
+     "iopub.execute_input": "2022-02-12T13:33:47.782855Z",
+     "iopub.status.busy": "2022-02-12T13:33:47.781008Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.113418Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.114046Z",
      "shell.execute_reply.started": "2022-02-05T19:10:03.203106Z"
     },
     "papermill": {
-     "duration": 1.338509,
-     "end_time": "2022-02-11T14:08:13.084940",
+     "duration": 1.349352,
+     "end_time": "2022-02-12T13:33:49.114464",
      "exception": false,
-     "start_time": "2022-02-11T14:08:11.746431",
+     "start_time": "2022-02-12T13:33:47.765112",
      "status": "completed"
     },
     "tags": []
@@ -49,20 +49,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a94a5d14",
+   "id": "fb97e497",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.114370Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.113546Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.132257Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.132782Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.141289Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.140124Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.167590Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.168158Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.349005Z"
     },
     "papermill": {
-     "duration": 0.038125,
-     "end_time": "2022-02-11T14:08:13.132959",
+     "duration": 0.042941,
+     "end_time": "2022-02-12T13:33:49.168385",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.094834",
+     "start_time": "2022-02-12T13:33:49.125444",
      "status": "completed"
     },
     "tags": []
@@ -166,20 +166,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7fcee6c1",
+   "id": "af20f105",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.158787Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.158123Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.451003Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.451555Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.208923Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.207746Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.496353Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.495653Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.375963Z"
     },
     "papermill": {
-     "duration": 0.307144,
-     "end_time": "2022-02-11T14:08:13.451765",
+     "duration": 0.316218,
+     "end_time": "2022-02-12T13:33:49.496511",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.144621",
+     "start_time": "2022-02-12T13:33:49.180293",
      "status": "completed"
     },
     "tags": []
@@ -188,7 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f04c730ed10>"
+       "<matplotlib.collections.PathCollection at 0x7f561dedbe50>"
       ]
      },
      "execution_count": 3,
@@ -221,20 +221,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5b9370e4",
+   "id": "854d8940",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.478988Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.478337Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.511168Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.511738Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.529198Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.528541Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.555194Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.554662Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.593069Z"
     },
     "papermill": {
-     "duration": 0.047911,
-     "end_time": "2022-02-11T14:08:13.511931",
+     "duration": 0.047345,
+     "end_time": "2022-02-12T13:33:49.555385",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.464020",
+     "start_time": "2022-02-12T13:33:49.508040",
      "status": "completed"
     },
     "tags": []
@@ -259,20 +259,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "93e8f482",
+   "id": "aab4b0ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.539942Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.539300Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.544650Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.545227Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.586138Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.585266Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.588537Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.589038Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.623539Z"
     },
     "papermill": {
-     "duration": 0.021072,
-     "end_time": "2022-02-11T14:08:13.545404",
+     "duration": 0.02203,
+     "end_time": "2022-02-12T13:33:49.589206",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.524332",
+     "start_time": "2022-02-12T13:33:49.567176",
      "status": "completed"
     },
     "tags": []
@@ -296,20 +296,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c0155ffd",
+   "id": "45ae50ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.573283Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.572433Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.577367Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.577870Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.617947Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.616934Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.622464Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.623075Z",
      "shell.execute_reply.started": "2022-02-05T19:10:04.635895Z"
     },
     "papermill": {
-     "duration": 0.020282,
-     "end_time": "2022-02-11T14:08:13.578040",
+     "duration": 0.021408,
+     "end_time": "2022-02-12T13:33:49.623248",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.557758",
+     "start_time": "2022-02-12T13:33:49.601840",
      "status": "completed"
     },
     "tags": []
@@ -333,20 +333,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a93930b0",
+   "id": "a9199283",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.608986Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.608319Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.614032Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.614585Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.652619Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.651614Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.657588Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.658154Z",
      "shell.execute_reply.started": "2022-02-05T19:10:39.439307Z"
     },
     "papermill": {
-     "duration": 0.023305,
-     "end_time": "2022-02-11T14:08:13.614750",
+     "duration": 0.02184,
+     "end_time": "2022-02-12T13:33:49.658336",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.591445",
+     "start_time": "2022-02-12T13:33:49.636496",
      "status": "completed"
     },
     "tags": []
@@ -369,13 +369,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f38593",
+   "id": "3dbf98c6",
    "metadata": {
     "papermill": {
-     "duration": 0.012722,
-     "end_time": "2022-02-11T14:08:13.640213",
+     "duration": 0.012251,
+     "end_time": "2022-02-12T13:33:49.683058",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.627491",
+     "start_time": "2022-02-12T13:33:49.670807",
      "status": "completed"
     },
     "tags": []
@@ -387,20 +387,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2a44d085",
+   "id": "93c2f02b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T14:08:13.669890Z",
-     "iopub.status.busy": "2022-02-11T14:08:13.669234Z",
-     "iopub.status.idle": "2022-02-11T14:08:13.674305Z",
-     "shell.execute_reply": "2022-02-11T14:08:13.674843Z",
+     "iopub.execute_input": "2022-02-12T13:33:49.712555Z",
+     "iopub.status.busy": "2022-02-12T13:33:49.711518Z",
+     "iopub.status.idle": "2022-02-12T13:33:49.717565Z",
+     "shell.execute_reply": "2022-02-12T13:33:49.718258Z",
      "shell.execute_reply.started": "2022-02-05T19:11:46.981666Z"
     },
     "papermill": {
-     "duration": 0.021979,
-     "end_time": "2022-02-11T14:08:13.675012",
+     "duration": 0.022749,
+     "end_time": "2022-02-12T13:33:49.718456",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.653033",
+     "start_time": "2022-02-12T13:33:49.695707",
      "status": "completed"
     },
     "tags": []
@@ -423,13 +423,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21b76ae",
+   "id": "3871561c",
    "metadata": {
     "papermill": {
-     "duration": 0.01358,
-     "end_time": "2022-02-11T14:08:13.702517",
+     "duration": 0.013133,
+     "end_time": "2022-02-12T13:33:49.744944",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.688937",
+     "start_time": "2022-02-12T13:33:49.731811",
      "status": "completed"
     },
     "tags": []
@@ -443,13 +443,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9628a07",
+   "id": "28cff2f0",
    "metadata": {
     "papermill": {
-     "duration": 0.01396,
-     "end_time": "2022-02-11T14:08:13.731112",
+     "duration": 0.012833,
+     "end_time": "2022-02-12T13:33:49.771066",
      "exception": false,
-     "start_time": "2022-02-11T14:08:13.717152",
+     "start_time": "2022-02-12T13:33:49.758233",
      "status": "completed"
     },
     "tags": []
@@ -478,14 +478,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.309348,
-   "end_time": "2022-02-11T14:08:14.456115",
+   "duration": 13.494919,
+   "end_time": "2022-02-12T13:33:50.495958",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-11T14:08:01.146767",
+   "start_time": "2022-02-12T13:33:37.001039",
    "version": "2.3.3"
   }
  },
